--- a/app/src/main/res/layout/fragment_log_tag_customsignup.xml
+++ b/app/src/main/res/layout/fragment_log_tag_customsignup.xml
@@ -1,55 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/usernameWrapper"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <EditText
             android:id="@+id/userNameSignUp"
-            android:inputType="textPersonName"
-            android:hint="@string/username_hint"
             android:layout_width="match_parent"
-            android:layout_height="50dp" />
+            android:layout_height="50dp"
+            android:hint="@string/username_hint"
+            android:inputType="textPersonName" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/emailWrapper"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <EditText
             android:id="@+id/emailSignUp"
-            android:inputType="textEmailAddress"
-            android:hint="@string/email_hint"
             android:layout_width="match_parent"
-            android:layout_height="50dp" />
+            android:layout_height="50dp"
+            android:hint="@string/email_hint"
+            android:inputType="textEmailAddress" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/passwordWrapper"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <EditText
             android:id="@+id/passwordSignUp"
-            android:inputType="textPassword"
-            android:hint="@string/password_hint"
             android:layout_width="match_parent"
-            android:layout_height="50dp" />
+            android:layout_height="50dp"
+            android:hint="@string/password_hint"
+            android:inputType="textPassword" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/repeatPasswordWrapper"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <EditText
             android:id="@+id/repeatPasswordSignUp"
-            android:inputType="textPassword"
-            android:hint="@string/password_hint"
             android:layout_width="match_parent"
-            android:layout_height="50dp" />
+            android:layout_height="50dp"
+            android:hint="@string/password_hint"
+            android:inputType="textPassword" />
     </android.support.design.widget.TextInputLayout>
 
     <!--<Button-->
@@ -64,6 +69,6 @@
         android:id="@+id/user_signup_button"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/sign_up_button"/>
+        android:text="@string/sign_up_button" />
 
 </LinearLayout>
