--- a/app/src/main/res/layout/test_detail_layout.xml
+++ b/app/src/main/res/layout/test_detail_layout.xml
@@ -9,28 +9,28 @@
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/detail_backdrop_height"
-        android:theme="@style/Base.Theme.DesignDemo"
-        android:fitsSystemWindows="true">
+        android:fitsSystemWindows="true"
+        android:theme="@style/Base.Theme.DesignDemo">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
             android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimary"
+            app:expandedTitleMarginEnd="64dp"
             app:expandedTitleMarginStart="48dp"
-            app:expandedTitleMarginEnd="64dp">
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <lecho.lib.hellocharts.view.LineChartView
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/cubiclinechart"
+                android:layout_width="match_parent"
+                android:layout_height="242dp"
+                android:layout_gravity="bottom"
                 android:layout_marginTop="36dp"
                 android:fitsSystemWindows="true"
-                app:layout_collapseMode="pin"
-                android:layout_gravity="bottom"
-                android:layout_width="match_parent"
-                android:layout_height="242dp"/>
+                app:layout_collapseMode="pin" />
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -38,8 +38,8 @@
                 android:layout_height="?attr/actionBarSize"
                 android:layout_gravity="top"
                 android:background="?attr/colorPrimary"
-                app:popupTheme="@style/Base.Theme.DesignDemo"
-                app:layout_collapseMode="pin" />
+                app:layout_collapseMode="pin"
+                app:popupTheme="@style/Base.Theme.DesignDemo" />
 
 
 
@@ -48,23 +48,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <com.quascenta.petersroad.HorizontalScrollDatePicker.Ranger
-        android:id="@+id/styled_ranger"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scrollbarSize="2dp"
-        app:layout_anchor="@id/appbar"
 
-        android:fitsSystemWindows="true"
-        android:clickable="true"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        app:layout_anchorGravity="bottom|bottom|clip_vertical"
-        app:daysContainerBackgroundColor="#673AB7"
-        app:dayTextColor="#dddddd"
-        app:selectedDayTextColor="#eeeeee"
-        app:selectedDayBackgroundColor="#FF6600"
-        app:displayDayOfWeek="true"
-        app:alwaysDisplayMonth="true"/>
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -74,11 +58,11 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <FrameLayout
+            android:id="@+id/frame_content_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="8dp"
-            android:id="@+id/frame_content_list"
-            android:layout_marginTop="2dp">
+            android:layout_marginTop="2dp"
+            android:padding="8dp">
          </FrameLayout>
 
     </android.support.v4.widget.NestedScrollView>
