Adding bluetooth LE configuration

--- a/app/src/main/res/layout/tab_chat_2.xml
+++ b/app/src/main/res/layout/tab_chat_2.xml
@@ -18,5 +18,7 @@
     android:id="@+id/listview"
     android:layout_gravity="bottom"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"></ListView>
+    android:layout_height="wrap_content">
+
+    </ListView>
 </LinearLayout>
