--- a/app/src/main/res/layout/actionbar_indeterminate_progress.xml
+++ b/app/src/main/res/layout/actionbar_indeterminate_progress.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   Copyright 2013 Google Inc.
 
@@ -14,10 +15,10 @@
   limitations under the License.
   -->
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_height="wrap_content"
-             android:layout_width="56dp"
-             android:minWidth="56dp">
+    android:layout_height="wrap_content"
+    android:layout_width="56dp"
+    android:minWidth="56dp">
     <ProgressBar android:layout_width="32dp"
-                 android:layout_height="32dp"
-                 android:layout_gravity="center"/>
+        android:layout_height="32dp"
+        android:layout_gravity="center"/>
 </FrameLayout>
