--- a/app/src/main/res/layout/gatt_services_characteristics.xml
+++ b/app/src/main/res/layout/gatt_services_characteristics.xml
@@ -45,10 +45,10 @@
             android:textSize="18sp"/>
         <Space android:layout_width="5dp"
             android:layout_height="wrap_content"/>
-        <TextView android:id="@+id/data_value"
+        <EditText android:id="@+id/data_value"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/no_data"
+            android:hint="Enter Command as Bytes"
             android:textSize="18sp"/>
     </LinearLayout>
 
