--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,6 @@
     <dimen name="card_margin">16dp</dimen>
 
     <dimen name="list_item_avatar_size">40dp</dimen>
+    <dimen name="activity_vertical_bottom_margin">16dp</dimen>
+    <dimen name="activity_vertical_top_margin">8dp</dimen>
 </resources>
